things in middle

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -10,13 +10,13 @@ default: &default
 
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
-  additional_paths: []
+  additional_paths: ["app/javascript/images", "app/assets/images"]
 
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
 
   # Extract and emit a css file
-  extract_css: false
+  extract_css: true
 
   static_assets_extensions:
     - .jpg
@@ -31,6 +31,7 @@ default: &default
     - .ttf
     - .woff
     - .woff2
+    - .json
 
   extensions:
     - .mjs
@@ -46,6 +47,7 @@ default: &default
     - .gif
     - .jpeg
     - .jpg
+    - .json
 
 development:
   <<: *default
@@ -67,10 +69,9 @@ development:
     quiet: false
     pretty: false
     headers:
-      'Access-Control-Allow-Origin': '*'
+      "Access-Control-Allow-Origin": "*"
     watch_options:
-      ignored: '**/node_modules/**'
-
+      ignored: "**/node_modules/**"
 
 test:
   <<: *default
