--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "toastr": "^2.1.4",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
