--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     build:
       context: .
       dockerfile: DockerFile
-    volumes:
-      - ./:/var/www/cashnow/
+    # volumes:
+    #   - ./:/var/www/cashnow/
     ports:
       - '${PORT:-3000}:3000'
       - '3035:3035'
