--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "popper.js": "^1.16.1",
     "toastr": "^2.1.4",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
-  },
-  "version": "0.1.0",
-  "devDependencies": {
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3"
-  }
+  },
+  "version": "0.1.0"
 }
