--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,4 +1,4 @@
-:schedule:
-  fetch_clients:
-    cron: '* 0 * * 7'   # Runs every sunday, at 12am
-    class: FtpClientsWorker
+# :schedule:
+#   fetch_clients:
+#     cron: '* 0 * * 7'   # Runs every sunday, at 12am
+#     class: FtpClientsWorker
