docker compose fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,3 +33,5 @@ services:
       SECRET_KEY_BASE: ${SECRET_KEY_BASE}
       WEBPACKER_DEV_SERVER_HOST: ${WEBPACKER_DEV_SERVER_HOST}
       WEBPACKER_DEV_SERVER_PORT: ${WEBPACKER_DEV_SERVER_PORT}
+      SMTP_EMAIL: ${SMTP_EMAIL}
+      SMTP_PASS: ${SMTP_PASS}
